--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,12 @@ scikit-learn>=1.3.0
 tqdm>=4.65.0
 accelerate>=0.21.0
 sentence-transformers>=2.2.0
+# Web scraping dependencies
+beautifulsoup4>=4.12.0
+requests>=2.31.0
+wikipedia>=1.4.0
+feedparser>=6.0.10
+lxml>=4.9.0
 requests>=2.31.0
 beautifulsoup4>=4.12.0
 wikipedia>=1.4.0
