--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,128 @@
+# Core ML/NLP Dependencies
 datasets>=2.14.0
 huggingface_hub>=0.16.4
-transformers>=4.30.0
-torch>=2.0.0
-textattack>=0.3.9
+transformers>=4.35.0
+torch>=2.1.0
+tokenizers>=0.14.0
+accelerate>=0.24.0
+sentence-transformers>=2.2.0
 evaluate>=0.4.0
 rouge-score>=0.1.2
 sacrebleu>=2.3.1
-pandas>=1.5.0
-numpy>=1.24.0
-matplotlib>=3.6.0
-seaborn>=0.12.0
-gradio>=3.40.0
-fastapi>=0.100.0
-uvicorn>=0.23.0
 nltk>=3.8.0
-scikit-learn>=1.3.0
-tqdm>=4.65.0
-accelerate>=0.21.0
-sentence-transformers>=2.2.0
-# Web scraping dependencies
+textattack>=0.3.9
+
+# Modern Training & Optimization
+peft>=0.7.0  # Parameter-Efficient Fine-Tuning (LoRA, etc.)
+bitsandbytes>=0.41.0  # Quantization
+deepspeed>=0.12.0  # Distributed training
+torch-optimizer>=0.3.0  # Advanced optimizers
+wandb>=0.16.0  # Experiment tracking
+optuna>=3.4.0  # Hyperparameter optimization
+
+# Data Processing & Augmentation
+pandas>=2.0.0
+numpy>=1.24.0
+polars>=0.19.0  # Fast DataFrame library
+pyarrow>=14.0.0  # Efficient data format
+datasets>=2.14.0
+
+# Web Scraping (Enhanced)
 beautifulsoup4>=4.12.0
 requests>=2.31.0
+aiohttp>=3.8.0  # Async HTTP
+httpx>=0.25.0  # Modern HTTP client
 wikipedia>=1.4.0
 feedparser>=6.0.10
 lxml>=4.9.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-wikipedia>=1.4.0
+scrapy>=2.11.0  # Advanced scraping
+selenium>=4.15.0  # Browser automation
+
+# Modern API & Deployment
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.4.0
+redis>=5.0.0
+aioredis>=2.0.0
+celery>=5.3.0
+sqlalchemy[asyncio]>=2.0.0
+asyncpg>=0.29.0
+websockets>=12.0
+
+# Authentication & Security
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.6
+bcrypt>=4.0.0
+passlib[bcrypt]>=1.7.0
+
+# Monitoring & Observability
+prometheus-client>=0.19.0
+opentelemetry-api>=1.21.0
+opentelemetry-sdk>=1.21.0
+opentelemetry-instrumentation-fastapi>=0.42b0
+structlog>=23.2.0
+loguru>=0.7.0
+
+# Visualization & UI
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.17.0
+gradio>=4.8.0
+streamlit>=1.28.0
+bokeh>=3.3.0
+
+# Scientific Computing
+scipy>=1.11.0
+scikit-learn>=1.3.0
+statsmodels>=0.14.0
+
+# Model Serving & Optimization
+# Note: triton-inference-server is not available via pip - use Docker image instead
+# Note: tensorrt requires NVIDIA GPU and special installation
+onnx>=1.15.0
+onnxruntime>=1.16.0
+# onnxruntime-gpu>=1.16.0  # Uncomment if you have NVIDIA GPU
+
+# Development & Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+black>=23.10.0
+isort>=5.12.0
+flake8>=6.1.0
+mypy>=1.7.0
+pre-commit>=3.5.0
+
+# Container & Deployment
+# Note: docker, kubernetes, helm are system tools, not Python packages
+# Install them separately using system package manager
+docker>=6.1.0  # Docker SDK for Python
+pyyaml>=6.0.0  # For Kubernetes config parsing
+
+# Utilities
+python-dotenv>=1.0.0
+click>=8.1.0
+rich>=13.6.0
+typer>=0.9.0
+pyyaml>=6.0.0
+toml>=0.10.0
+jsonschema>=4.19.0
+
+# Memory & Performance
+psutil>=5.9.0
+GPUtil>=1.4.0
+memory-profiler>=0.61.0
+py-spy>=0.3.0
+
+# Advanced NLP Tools
+spacy>=3.7.0
+nltk>=3.8.0
+stanza>=1.7.0
+# Note: polyglot has dependency issues, using alternatives
+langdetect>=1.0.9  # Language detection
+# polyglot alternatives: use spacy with language-specific models instead
+
+# Jupyter & Notebooks (for development)
+jupyter>=1.0.0
+jupyterlab>=4.0.0
+ipywidgets>=8.1.0
+nbconvert>=7.10.0
